[package]
name = "hyperbeam"
version = "0.1.0"
authors = ["Sonny Scroggin <sonny@scrogg.in>"]
edition = "2018"

[lib]
name = "hyperbeam"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { git = "https://github.com/rusterlium/rustler", branch = "master" }
hyper = "0.12.24"
futures = "0.1"
